--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
   </head>
   <body>
-    <script src="script.js"></script>
     <script src="player.js"></script>
+    <script src="block.js"></script>
+    <script src="script.js"></script>    
   </body>
 </html>
